--- a/src/index.css
+++ b/src/index.css
@@ -51,16 +51,18 @@ body {
 .container {
   background-color: white;
   border-radius: 12px;
-  padding: 1.5rem;
+  padding: 1rem;
   box-shadow: 4px 8px 32px rgba(0, 0, 0, 0.35);
   display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  max-width: 1200px;
 }
 
 .header {
   width: 100%;
-  max-width: 991px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 1rem;
   color: white;
@@ -74,7 +76,6 @@ body {
 .link_nav {
   color: white;
   font-size: 1rem;
-  color: white;
 }
 
 .link_nav.active {
@@ -87,21 +88,25 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: auto;
 }
 
 .users__list {
+  flex-direction: column;
   display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 1rem;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  width: 100%;
+  overflow: auto;
 }
 
 .user {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 0.5rem;
+  overflow: auto;
+  justify-content: space-between;
 }
 
 .user__header {
@@ -132,7 +137,7 @@ body {
 }
 
 .user__content-item {
-  padding: 1.5rem 0;
+  padding: 1rem 0;
   display: flex;
   justify-content: space-between;
   border-top: 1px solid #e5e7eb;
@@ -146,10 +151,16 @@ body {
 .btn {
   border: none;
   cursor: pointer;
-  padding: 1rem 2rem;
+  padding: 0.5rem;
   border-radius: 10px;
   font-family: inherit;
   align-self: center;
+  min-width: 2.5rem;
+  min-height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #047790;
 }
 
 .error {
@@ -161,12 +172,13 @@ body {
 
 @media (min-width: 450px) {
   .container {
-    padding: 2rem;
-    max-width: 80%;
+    padding: 1.5rem;
   }
 
   .users__list {
     flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
   }
 }
 
@@ -176,11 +188,65 @@ body {
     line-height: 28px;
   }
   .container {
-    max-width: 60%;
     padding: 3rem;
   }
 
   .users__list {
     gap: 2rem;
   }
+  .user__content-item {
+    padding: 1.5rem 0;
+  }
+}
+
+.container.container_todo {
+  height: 100%;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.tasks__input {
+  padding: 1rem;
+  border-radius: 12px;
+  border: 0;
+  background-color: #e5e7eb;
+  color: #4b5563;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: block;
+  font-size: 1rem;
+  outline: none;
+}
+
+.tasks__form {
+  width: 100%;
+}
+
+.tasks__content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  flex-grow: 1;
+  overflow: auto;
+}
+
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(203 213 225);
+  border-radius: 12px;
+  padding: 0.5rem 1rem;
+  gap: 0.5rem;
+  color: #4b5563;
+}
+
+.task.task_completed {
+  opacity: 0.5;
+}
+
+.task__content {
+  flex-grow: 1;
 }
