--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,13 @@ a {
   color: #4b5563;
 }
 
+h2 {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #ff7f3e;
+  margin: 0;
+}
+
 a:hover {
   color: #ff7f3e;
 }
@@ -53,11 +60,52 @@ body {
   border-radius: 12px;
   padding: 1rem;
   box-shadow: 4px 8px 32px rgba(0, 0, 0, 0.35);
-  display: flex;
   overflow: auto;
   width: 100%;
   height: 100%;
   max-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.btn {
+  border: none;
+  cursor: pointer;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-family: inherit;
+  align-self: center;
+  min-width: 2.5rem;
+  min-height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #047790;
+}
+
+.info-box {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.link_sub {
+  font-size: 0.8rem;
+}
+
+.link_nav {
+  color: white;
+  font-size: 1rem;
+}
+
+.link_nav.active {
+  color: #ff7f3e;
+  font-size: 2rem;
 }
 
 .header {
@@ -73,16 +121,6 @@ body {
   justify-content: center;
 }
 
-.link_nav {
-  color: white;
-  font-size: 1rem;
-}
-
-.link_nav.active {
-  color: #ff7f3e;
-  font-size: 2rem;
-}
-
 .main {
   flex-grow: 1;
   display: flex;
@@ -91,7 +129,7 @@ body {
   overflow: auto;
 }
 
-.users__list {
+.users {
   flex-direction: column;
   display: flex;
   gap: 1rem;
@@ -99,6 +137,8 @@ body {
   justify-content: center;
   width: 100%;
   overflow: auto;
+  align-self: center;
+  margin: auto;
 }
 
 .user {
@@ -107,6 +147,7 @@ body {
   gap: 0.5rem;
   overflow: auto;
   justify-content: space-between;
+  height: 100%;
 }
 
 .user__header {
@@ -125,17 +166,6 @@ body {
   text-align: center;
 }
 
-.user__header-name {
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: #ff7f3e;
-  margin: 0;
-}
-
-.user__header-email {
-  font-size: 0.8rem;
-}
-
 .user__content-item {
   padding: 1rem 0;
   display: flex;
@@ -146,63 +176,11 @@ body {
 .user__content-bio {
   color: #4b5563;
   text-align: center;
+  font-size: 0.8rem;
 }
 
-.btn {
-  border: none;
-  cursor: pointer;
-  padding: 0.5rem;
-  border-radius: 10px;
-  font-family: inherit;
-  align-self: center;
-  min-width: 2.5rem;
-  min-height: 2.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #047790;
-}
-
-.error {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  align-items: center;
-}
-
-@media (min-width: 450px) {
-  .container {
-    padding: 1.5rem;
-  }
-
-  .users__list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: auto;
-  }
-}
-
-@media (min-width: 991px) {
-  html {
-    font-size: 18px;
-    line-height: 28px;
-  }
-  .container {
-    padding: 3rem;
-  }
-
-  .users__list {
-    gap: 2rem;
-  }
-  .user__content-item {
-    padding: 1.5rem 0;
-  }
-}
-
-.container.container_todo {
-  height: 100%;
-  flex-direction: column;
-  gap: 2rem;
+.tasks__form {
+  width: 100%;
 }
 
 .tasks__input {
@@ -217,10 +195,6 @@ body {
   display: block;
   font-size: 1rem;
   outline: none;
-}
-
-.tasks__form {
-  width: 100%;
 }
 
 .tasks__content {
@@ -249,4 +223,35 @@ body {
 
 .task__content {
   flex-grow: 1;
+}
+
+@media (min-width: 450px) {
+  .container {
+    padding: 1.5rem;
+  }
+
+  .users {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+  }
+}
+
+@media (min-width: 991px) {
+  html {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .container {
+    padding: 3rem;
+  }
+
+  .users {
+    gap: 2rem;
+  }
+
+  .user__content-item {
+    padding: 1.5rem 0;
+  }
 }
